[package]
name = "chariot_slp"
description = "A library for reading/writing Age of Empires (1997) SLP files"
license = "MIT"
version = "0.1.2"
keywords = ["slp", "aoe", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]
documentation = "https://docs.rs/chariot_slp/"
repository = "https://github.com/ChariotEngine/Slp"
readme = "README.md"

[dependencies]
error-chain = "0.5"
chariot_io_tools = "0.1"
libc = { version = "0.2", optional = true }

[dev-dependencies]
clap = "2.17"

[features]
chariot_slp_ffi = ["libc"]
